<resources>
	<string name="app_name" translatable="false">Security</string>
	<string name="camera_permission_not_granted">Camera permission not granted by the user.</string>
	<string name="unknown">Unknown</string>
	<string name="identification_qr">Scan QR code</string>
	<string name="identification_face">Face ID</string>
	<string name="identification_verify_attendee">Are the person in front of you and the one on the photo the same?</string>
	<string name="identification_success_text">Identification succeeded!</string>
	<string name="button_yes">Yes</string>
	<string name="button_no">No</string>
	<string name="title_identification_finish">Finish</string>
	<string name="title_identification">Identification</string>
	<string name="title_camera_capture">Capture</string>
	<string name="title_home">Home</string>
	<string name="title_incidents">Incidents</string>
	<string name="button_filter_by_date_range">Filter by date</string>
	<string name="button_clear_date_filter">Clear filter</string>
	<string name="title_select_dates">Select date range</string>
	<string name="incident_no_description">No description</string>
	<string name="incident_date_time">Visit time: %s</string>
	<string name="title_visits">Visits</string>
	<string name="title_identification_result">Identification</string>
	<string name="incident_item_button_details">Details</string>
	<string name="create_incident_title">Create incident</string>
	<string name="create_incident_first_name_label">First name</string>
	<string name="create_incident_last_name_label">Last name</string>
	<string name="create_incident_middle_name_label">Middle name</string>
	<string name="create_incident_description_label">Description</string>
	<string name="create_incident_button_create">Create</string>
	<string name="home_card_title">Passing procedure for parents/relatives</string>
	<string name="home_card_sub_title">Choose preferred type of identification</string>
	<string name="similar_attendees_incident">There\'s no such person</string>
	<string name="similar_attendees_title">List of persons similar to the attendee</string>
	<string name="similar_attendees_sub_title">Is there a similar person?</string>
</resources>