<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/cardView_confirmation"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="24dp"
	android:layout_marginTop="24dp"
	android:backgroundTint="?colorSurfaceVariant">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="14dp"
		android:orientation="vertical">

		<TextView
			style="@style/TextAppearance.Material3.TitleMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/home_card_title" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginVertical="24dp"
			android:text="@string/home_card_sub_title" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="end"
			android:orientation="horizontal">

			<Button
				android:id="@+id/button_qr"
				style="@style/Widget.Material3.Button.OutlinedButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginEnd="8dp"
				android:text="@string/identification_qr" />

			<Button
				android:id="@+id/button_face"
				style="?materialButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/identification_face" />

		</LinearLayout>
	</LinearLayout>

</com.google.android.material.card.MaterialCardView>