<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_home">

	<fragment
		android:id="@+id/navigation_home"
		android:name="wj.genericrabbit.app.ui.home.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home">
		<action
			android:id="@+id/home_toQrCaptureFragment"
			app:destination="@id/navigation_identification_qr" />
		<action
			android:id="@+id/home_toFaceCaptureFragment"
			app:destination="@id/navigation_identification_face" />
	</fragment>

	<fragment
		android:id="@+id/navigation_identification_face"
		android:name="wj.genericrabbit.app.ui.identification.capture.FaceCaptureFragment"
		tools:layout="@layout/fragment_capture_face">
		<action
			android:id="@+id/face_toResultFragment"
			app:destination="@+id/navigation_identification_result" />
	</fragment>

	<fragment
		android:id="@+id/navigation_identification_qr"
		android:name="wj.genericrabbit.app.ui.identification.capture.QrCaptureFragment"
		tools:layout="@layout/fragment_capture_qr">
		<action
			android:id="@+id/qr_toResultFragment"
			app:destination="@+id/navigation_identification_result" />
	</fragment>

	<dialog
		android:id="@+id/navigation_identification_result"
		android:name="wj.genericrabbit.app.ui.identification.result.IdentificationResultFragment"
		android:label="@string/title_identification_result"
		tools:layout="@layout/bottom_sheet_identification_result">
		<argument
			android:name="identificationData"
			app:argType="wj.genericrabbit.app.domain.model.IdentificationData" />
		<action
			android:id="@+id/result_toSuccessFragment"
			app:destination="@+id/navigation_identification_success" />
	</dialog>

	<fragment
		android:id="@+id/navigation_identification_success"
		android:name="wj.genericrabbit.app.ui.identification.success.IdentificationSuccessFragment"
		android:label="@string/title_identification_finish"
		tools:layout="@layout/fragment_identification_success">
		<argument
			android:name="attendee"
			app:argType="wj.genericrabbit.app.domain.model.Attendee" />
		<action
			android:id="@+id/success_toHomeFragment"
			app:destination="@+id/navigation_home"
			app:popUpToInclusive="true" />
	</fragment>

	<fragment
		android:id="@+id/navigation_incidents"
		android:name="wj.genericrabbit.app.ui.incidents.IncidentsFragment"
		android:label="@string/title_incidents"
		tools:layout="@layout/fragment_list">
		<action
			android:id="@+id/incidents_toDetailsFragment"
			app:destination="@+id/navigation_incident_details" />
	</fragment>

	<dialog
		android:id="@+id/navigation_incident_details"
		android:name="wj.genericrabbit.app.ui.incidents.IncidentDetailsFragment"
		tools:layout="@layout/bottom_sheet_incident_details">
		<argument
			android:name="incident"
			app:argType="wj.genericrabbit.app.domain.model.Incident" />

	</dialog>

	<fragment
		android:id="@+id/navigation_visits"
		android:name="wj.genericrabbit.app.ui.visits.VisitsFragment"
		android:label="@string/title_visits"
		tools:layout="@layout/fragment_list" />

	<dialog
		android:id="@+id/navigation_edit_profile"
		android:name="wj.genericrabbit.app.ui.profile.edit.EditProfileFragment"
		android:label="@string/edit_profile_title"
		tools:layout="@layout/bottom_sheet_edit_profile"/>

</navigation>