<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/identification_result_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="200dp"
			app:layout_constraintTop_toTopOf="parent">

			<View
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/md_theme_dark_background" />

			<ImageView
				android:id="@+id/imageView_attendee_photo"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:backgroundTint="@color/md_theme_dark_background"
				android:src="@drawable/avatar"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:id="@+id/textView_attendee_name"
			style="@style/TextAppearance.Material3.TitleLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="12dp"
			android:layout_marginTop="12dp"
			android:text="@string/unknown" />

		<TextView
			style="@style/TextAppearance.Material3.BodyLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="12dp"
			android:layout_marginTop="24dp"
			android:text="@string/identification_verify_attendee" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginTop="24dp"
			android:layout_marginEnd="12dp"
			android:layout_marginBottom="12dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/button_confirmation_no"
				style="@style/Widget.Material3.Button.OutlinedButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="6dp"
				android:text="@string/button_no" />

			<Button
				android:id="@+id/button_confirmation_yes"
				style="@style/Widget.Material3.Button.UnelevatedButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_yes" />
		</LinearLayout>

	</LinearLayout>

	<com.google.android.material.progressindicator.CircularProgressIndicator
		android:id="@+id/progressIndicator_loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical|center_horizontal"
		android:indeterminate="true" />
</FrameLayout>
