<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/textView_similar_attendees_title"
			style="?textAppearanceTitleMedium"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:text="@string/similar_attendees_title"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/textView_similar_attendees_sub_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="12dp"
			android:text="@string/similar_attendees_sub_title"
			app:layout_constraintTop_toBottomOf="@+id/textView_similar_attendees_title" />


		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recyclerView_similar_attendees"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginVertical="48dp"
			android:orientation="horizontal"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:layout_constraintBottom_toTopOf="@id/button_similar_attendees_incident"
			app:layout_constraintTop_toBottomOf="@+id/textView_similar_attendees_sub_title" />

		<Button
			android:id="@+id/button_similar_attendees_incident"
			style="?materialButtonOutlinedStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="48dp"
			android:layout_marginBottom="24dp"
			android:text="@string/similar_attendees_incident"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@id/recyclerView_similar_attendees" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>