<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/incident_details_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginBottom="28dp">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="200dp"
			app:layout_constraintTop_toTopOf="parent">

			<View
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/md_theme_dark_background" />

			<ImageView
				android:id="@+id/imageView_incident_photo"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:backgroundTint="@color/md_theme_dark_background"
				android:src="@drawable/avatar"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:id="@+id/textView_incident_name"
			style="@style/TextAppearance.Material3.TitleLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="12dp"
			android:layout_marginTop="12dp"
			android:text="@string/unknown" />

		<TextView
			android:id="@+id/textView_incident_description"
			style="@style/TextAppearance.Material3.BodyLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="12dp"
			android:layout_marginTop="24dp"
			android:text="@string/incident_no_description" />

		<TextView
			android:id="@+id/textView_incident_date_time"
			style="@style/TextAppearance.Material3.BodyLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="12dp"
			android:layout_marginTop="24dp"
			android:text="@string/incident_date_time" />

	</LinearLayout>

	<com.google.android.material.progressindicator.CircularProgressIndicator
		android:id="@+id/progressIndicator_incident_loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:layout_gravity="center_vertical|center_horizontal"
		android:indeterminate="true" />
</FrameLayout>
